--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^1.9.2",
     "onoff": "^1.1.1",
     "rpi-gpio": "^0.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sleep": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
