--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^4.5.3",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
+    "nconf": "^0.8.4",
     "node-aplay": "^1.0.3",
     "nodemon": "^1.9.2",
     "onoff": "^1.1.1",
