--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "nodemon": "^1.9.2",
     "onoff": "^1.1.1",
     "rpi-gpio": "^0.7.0",
-    "serve-favicon": "~2.3.0",
-    "sleep": "^3.0.1"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
