--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "forever": "^0.15.2",
     "jade": "~1.11.0",
     "mongo": "^0.1.0",
     "mongodb": "^2.2.0",
