--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^2.2.0",
     "mongoose": "^4.5.3",
     "morgan": "~1.7.0",
+    "mustbe": "^0.4.0",
     "nconf": "^0.8.4",
     "node-aplay": "^1.0.3",
     "nodemon": "^1.9.2",
