--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "mongodb": "^2.2.0",
     "mongoose": "^4.5.3",
     "morgan": "~1.7.0",
+    "mustbe": "^0.4.0",
     "nconf": "^0.8.4",
     "node-aplay": "^1.0.3",
     "nodemon": "^1.9.2",
     "onoff": "^1.1.1",
+    "request": "^2.74.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
