--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "eddystone-beacon": "^1.0.7",
     "express": "~4.13.4",
     "forever": "^0.15.2",
     "forever-service": "^0.5.7",
