--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "onoff": "^1.1.1",
     "request": "^2.74.0",
     "serve-favicon": "~2.3.0",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
